--- a/cube-solver.ipynb
+++ b/cube-solver.ipynb
@@ -1,36 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "c9500da4",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Environment\n",
-    "First we need to describe the environment in which the model is going to be trained (relevant informations to do so [here](https://gymnasium.farama.org/tutorials/gymnasium_basics/environment_creation/))"
+    "         Positions                                Solution State\n",
+    "\n",
+    "         +--------+                               +--------+\n",
+    "         | 0    1 |                               | A    A |\n",
+    "         |   d1   |                               |   d1   |\n",
+    "         | 2    3 |                               | A    A |\n",
+    "+--------+--------+--------+--------+    +--------+--------+--------+--------+\n",
+    "| 16  17 | 4    5 | 8   9  | 12  13 |    | E    E | B    B | C    C | D    D |\n",
+    "|   r1   |   f0   |   r0   |   f1   |    |   r1   |   f0   |   r0   |   f1   |\n",
+    "| 18  19 | 6    7 | 10  11 | 14  15 |    | E    E | B    B | C    C | D    D |\n",
+    "+--------+--------+--------+--------+    +--------+--------+--------+--------+\n",
+    "         | 20  21 |                               | F    F |\n",
+    "         |   d0   |                               |   d0   |\n",
+    "         | 22  23 |                               | F    F |\n",
+    "         +--------+                               +--------+"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eb30827a",
-   "metadata": {
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "execution": {
-     "iopub.execute_input": "2024-01-10T14:09:04.405131Z",
-     "iopub.status.busy": "2024-01-10T14:09:04.404590Z",
-     "iopub.status.idle": "2024-01-10T14:09:06.450967Z",
-     "shell.execute_reply": "2024-01-10T14:09:06.448923Z"
-    },
-    "papermill": {
-     "duration": 2.056336,
-     "end_time": "2024-01-10T14:09:06.454573",
-     "exception": false,
-     "start_time": "2024-01-10T14:09:04.398237",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -86,7 +80,7 @@
     "        self.move_count += 1\n",
     "        # Calculate reward\n",
     "        if np.any(np.all(self.state == SOLVED_STATE_INDEX, axis=1)): \n",
-    "            reward = 1000\n",
+    "            reward = 100\n",
     "            done = True\n",
     "        else: \n",
     "            done = False\n",
@@ -133,260 +127,95 @@
     "         +--------+                    \n",
     "\n",
     "      '''\n",
-    "        return ascii.format(*self.state)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "34b95ed1",
-   "metadata": {},
-   "source": [
-    "# Model\n",
-    "We can initialize a new model"
+    "        return ascii.format(*self.state)\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b289cf4f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T14:09:06.465014Z",
-     "iopub.status.busy": "2024-01-10T14:09:06.464296Z",
-     "iopub.status.idle": "2024-01-10T14:09:27.844298Z",
-     "shell.execute_reply": "2024-01-10T14:09:27.843267Z"
-    },
-    "papermill": {
-     "duration": 21.389,
-     "end_time": "2024-01-10T14:09:27.847449",
-     "exception": false,
-     "start_time": "2024-01-10T14:09:06.458449",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using cpu device\n",
-      "Wrapping the env with a `Monitor` wrapper\n",
-      "Wrapping the env in a DummyVecEnv.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Z004NB2K\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "from stable_baselines3 import PPO\n",
-    "from stable_baselines3.common.env_util import make_vec_env\n",
+    "env = Cube2x2Env()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create the neural network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchi\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
     "\n",
-    "# Parallel environments\n",
-    "env = Cube2x2Env()\n",
-    "model = PPO(\"MlpPolicy\", env, verbose=1, tensorboard_log='logs/')"
+    "input_layer = torch.tensor(env.state, dtype=torch.float)\n",
+    "\n",
+    "W1 = torch.randn(24,72)\n",
+    "B1 = torch.randn(1,72)\n",
+    "W2 = torch.randn(72,72)\n",
+    "B2 = torch.randn(1,72)\n",
+    "W3 = torch.randn(72,6)\n",
+    "B3 = torch.randn(1,6)\n",
+    "\n",
+    "layer1 = torch.tanh(input_layer @ W1 + B1)\n",
+    "layer2 = torch.tanh(layer1 @ W2 + B2)\n",
+    "logits = torch.softmax(layer2 @ W3 + B3, dim=1)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c22c10d7",
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
-   "source": [
-    "Or start from a previous version by loading the corresponding file (This one comes from a previous version of this notebook)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a35d7148",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T14:09:27.859838Z",
-     "iopub.status.busy": "2024-01-10T14:09:27.857847Z",
-     "iopub.status.idle": "2024-01-10T14:09:29.525588Z",
-     "shell.execute_reply": "2024-01-10T14:09:29.523590Z"
-    },
-    "papermill": {
-     "duration": 1.676061,
-     "end_time": "2024-01-10T14:09:29.528164",
-     "exception": true,
-     "start_time": "2024-01-10T14:09:27.852103",
-     "status": "failed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrapping the env with a `Monitor` wrapper\n",
-      "Wrapping the env in a DummyVecEnv.\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = PPO.load(\"cube-solver-1.0.zip\", env, tensorboard_log='logs/',  learning_rate = 0.00003)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a23f38fc",
+   "execution_count": 39,
    "metadata": {},
-   "source": [
-    "Since solving the 2x2 cube from any state is way too hard for the model at first, my idea is to train the model for 1e6 iterations at n-step from the start, starting from 1 to 20. We save the model after each loop. So far, this (quite naive) idea has not been terrible. While the method is slow, it is getting increasingly better results. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "144c11a3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T14:07:59.967483Z",
-     "iopub.status.busy": "2024-01-10T14:07:59.967080Z",
-     "iopub.status.idle": "2024-01-10T14:08:02.949781Z",
-     "shell.execute_reply": "2024-01-10T14:08:02.948389Z",
-     "shell.execute_reply.started": "2024-01-10T14:07:59.967449Z"
-    },
-    "papermill": {
-     "duration": null,
-     "end_time": null,
-     "exception": null,
-     "start_time": null,
-     "status": "pending"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logging to logs/PPO_1\n",
-      "---------------------------------\n",
-      "| rollout/           |          |\n",
-      "|    ep_len_mean     | 1e+03    |\n",
-      "|    ep_rew_mean     | -1e+03   |\n",
-      "| time/              |          |\n",
-      "|    fps             | 690      |\n",
-      "|    iterations      | 1        |\n",
-      "|    time_elapsed    | 2        |\n",
-      "|    total_timesteps | 2048     |\n",
-      "---------------------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(5):\n",
-    "    env.steps_from_solved = i\n",
-    "    model.learn(total_timesteps=10000000)\n",
-    "    model.save('cube-solver-1.' + i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "d48b169d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T14:08:13.087521Z",
-     "iopub.status.busy": "2024-01-10T14:08:13.086732Z",
-     "iopub.status.idle": "2024-01-10T14:08:13.095501Z",
-     "shell.execute_reply": "2024-01-10T14:08:13.094647Z",
-     "shell.execute_reply.started": "2024-01-10T14:08:13.087483Z"
-    },
-    "papermill": {
-     "duration": null,
-     "end_time": null,
-     "exception": null,
-     "start_time": null,
-     "status": "pending"
-    },
-    "tags": []
-   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 0, 5, 0, 1, 3, 5, 1, 4, 2, 0, 4, 3, 5, 5, 0, 3, 2, 1, 1, 4, 2,\n",
-       "       4, 3], dtype=uint8)"
+       "tensor([[3.8544e-05, 6.9670e-01, 1.4711e-02, 1.2641e-02, 1.8972e-04, 2.7572e-01]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.steps_from_solved = 11\n",
-    "obs = env.reset()[0];obs"
+    "logits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f2a824ac",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T14:08:29.224437Z",
-     "iopub.status.busy": "2024-01-10T14:08:29.223913Z",
-     "iopub.status.idle": "2024-01-10T14:08:35.411071Z",
-     "shell.execute_reply": "2024-01-10T14:08:35.409968Z",
-     "shell.execute_reply.started": "2024-01-10T14:08:29.224398Z"
-    },
-    "papermill": {
-     "duration": null,
-     "end_time": null,
-     "exception": null,
-     "start_time": null,
-     "status": "pending"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5231\n"
-     ]
-    }
-   ],
-   "source": [
-    "dones = False\n",
-    "steps = 0\n",
-    "while not dones:\n",
-    "    action, _states = model.predict(obs)\n",
-    "    obs, rewards, dones, _, info = env.step(action.item())\n",
-    "    steps += 1 \n",
-    "print(steps)"
-   ]
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "kaggle": {
-   "accelerator": "none",
-   "dataSources": [
-    {
-     "sourceId": 157647845,
-     "sourceType": "kernelVersion"
-    }
-   ],
-   "dockerImageVersionId": 30626,
-   "isGpuEnabled": false,
-   "isInternetEnabled": true,
-   "language": "python",
-   "sourceType": "notebook"
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -400,21 +229,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
-  },
-  "papermill": {
-   "default_parameters": {},
-   "duration": 31.760687,
-   "end_time": "2024-01-10T14:09:32.194002",
-   "environment_variables": {},
-   "exception": true,
-   "input_path": "__notebook__.ipynb",
-   "output_path": "__notebook__.ipynb",
-   "parameters": {},
-   "start_time": "2024-01-10T14:09:00.433315",
-   "version": "2.4.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
